cmake_minimum_required(VERSION 3.7)
project(DisplayVideo)
set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV 4.5.3 EXACT REQUIRED PATHS /usr/local/)
find_package(spdlog REQUIRED)
find_package(fmt REQUIRED)
find_package(onnxruntime REQUIRED)
find_package(yaml-cpp REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${onnxruntime_INCLUDE_DIRS}/onnxruntime/include)
include_directories(.)
add_executable(watcher main.cpp security_camera.cpp checkers.cpp yolo_onnx.cpp streams.cpp header.h checkers.h yolo_onnx.h streams.h security_camera.h)
target_link_libraries(watcher ${OpenCV_LIBS})
target_link_libraries(watcher fmt::fmt)
target_link_libraries(watcher spdlog::spdlog)
target_link_libraries(watcher ${onnxruntime_LIBRARY})
target_link_libraries(watcher yaml-cpp::yaml-cpp)
